k8s/frontend/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: frontend
                  image: 837126493345.dkr.ecr.ap-northeast-2.amazonaws.com/goormthon-4/frontend:build-14
                  ports:
                      - containerPort: 3000
                  volumeMounts:
                      - name: config-volume
                        mountPath: /app/config
                        readOnly: true
            volumes:
                - name: config-volume
                  configMap:
                      name: frontend-config
---
apiVersion: v1
kind: Service
metadata:
    name: frontend-service
spec:
    selector:
        app: frontend
    ports:
        - port: 80
          targetPort: 3000
